# StudySheduleBot

./: .gitignore  Makefile  README.md  pyproject.toml
Bot/: __init__.py  bot.py
Bot/Scripts/: html_handler.py  main.py  utils.py
Scripts/: convertors.py  html_handler.py  main.py  requester.py
